--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path_provider: ^2.1.4
   intl: ^0.19.0
   flutter_local_notifications: ^17.2.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
