--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.19.0
   flutter_local_notifications: ^17.2.3
   shared_preferences: ^2.2.2
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
