--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   shared_preferences: ^2.2.2
   timezone: ^0.9.2
+  sleek_circular_slider: ^2.0.1      # 원형 배터리 링 UI
+  avatar_glow: ^2.0.2               # 충전 시 네온 효과
 
 dev_dependencies:
   flutter_test:
