--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,12 +14,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>life_battery</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -45,5 +41,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 </dict>
 </plist>
