--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,15 @@ dependencies:
   timezone: ^0.9.2
   sleek_circular_slider: ^2.0.1      # 원형 배터리 링 UI
   avatar_glow: ^3.0.1               # 충전 시 네온 효과
+  sqflite: ^2.3.3+1                # 스케줄 저장용 경량 DB
+  path: ^1.9.0                     # 파일 경로 조합 헬퍼
+  go_router: ^14.2.0               # 선언형 라우팅 라이브러리
+  geolocator: ^11.0.0              # 위치 좌표 획득용
+  permission_handler: ^11.3.1      # 권한 요청/확인
+  geofence_service: ^6.0.0         # 플랫폼 공통 지오펜스 처리
+  uuid: ^4.3.3                     # UUID 생성
+  flutter_map: ^6.1.0              # 간단한 지도 표시
+  latlong2: ^0.9.0                 # 지도 위 좌표 계산
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +39,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/holidays.json
 
 flutter_launcher_icons:             # ← 앱 아이콘 설정 블록
   android: true
